--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -4,5 +4,6 @@
     ],
     "julia.enableTelemetry": false,
     "julia.execution.resultType": "inline",
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "editor.fontSize": 13
 }
