--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -8,5 +8,7 @@
     "editor.fontSize": 13,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter.notebook.ipynb"
-    }
+    },
+
+    "python.analysis.autoImportCompletions": false
 }
